--- a/app/src/main/res/layout/activity_row.xml
+++ b/app/src/main/res/layout/activity_row.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:layout_width="512dp"
         android:layout_height="512dp"
-        android:id="@+id/card_image"/>
+        android:id="@+id/card_image"
+        android:contentDescription="Card_Image"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -30,6 +31,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/card_health"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add to collection"
+        android:onClick="toggleCollected"
+        android:id="@+id/collect_button"/>
 
 </LinearLayout>
 
